Improved code and added more logging